# ProjetFactures

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  deepdoctection_method.ipynb  gpt_method.ipynb  interface.py  main.py  ocr_method.ipynb  pyproject.toml  requirements.txt
Files_preprocessors/: pdf_to_txt_convertor.py  result_saver.py
GPT/: gpt.py
OCR/: text_detector.py
PDF_preprocessors/: pdf_to_html_convertor.py  pdf_to_image_convertor.py  pdf_to_txt_convertor.py
Pipelines/: complete_pipeline.py  pipeline_for_no_ocr_pdf.py
Tests/: test_gpt.py  test_pdf_to_html_convertor.py  test_rib_extractor.py
Texts/: info_extracted_verification.py  rib_extractor.py
